log/build_2025-03-19_15-19-51/py_pubsub/stderr.log
  File "/home/OSTR/modem_ws2/install/py_pubsub/lib/python3.12/site-packages/py_pubsub/fishtemp.py", line 16
    def death(self,msg)
                       ^
SyntaxError: expected ':'

